--- a/msgg.htm
+++ b/msgg.htm
@@ -32,7 +32,7 @@ font-family:Cookie,sans-serif;
        </script>
 
 
-      <style type='text/css'>body, a, a:link{cursor:url(https://i.ibb.co/Yyrq961/D3-pointer.png), default;} a:hover {cursor:url(https://i.ibb.co/Yyrq961/D3-pointer.png),wait;}</style>
+      <style type='text/css'>body, a, a:link{cursor:url(https://i.ibb.co/rf5fvxx/D3-VR4-J-cursor.png), default;} a:hover {cursor:url(https://i.ibb.co/rf5fvxx/D3-VR4-J-cursor.png),wait;}</style>
 
  
 
