--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ alert("• D3VR4J WAS HERE •")
  </head>
  <body onload="type_text()" alink="#ffffff" vlink="#ffffff" link="#ffffff" text="#ffffff">
   <audio id="et"> 
-   <source src="https://www.mboxdrive.com/$uicideboy$_-_praisethedevil_instrumental(128k).mp3" type="audio/mpeg"></source> 
+   <source src="https://devraj.vip/assets/muzik/d3vr4j.mp3" type="audio/mpeg"></source> 
   </audio> 
   <link href="https://fonts.googleapis.com/css?family=Metal+Mania&amp;display=swap" rel="stylesheet" /> 
   <meta property="og:description" content="Ora Exploit Ora Uwu" /> 
