--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ alert("• D3VR4J WAS HERE •")
   <title>• D3VR4J WAS HERE •</title> 
   <link rel="SHORTCUT ICON" type="image/x-icon" href=https://i.ibb.co/5cFTNjr/D3VR4J.png" /> 
  </head>
- <body onload="type_text()" alink="#ffffff" vlink="#ffffff" link="#ffffff" text="#ffffff">
+ <body onload="type_text()" alink="#ffffff" vlink="#ffffff" link="#ffffff" text="#ffffff" style="overflow:hidden;">
   <audio id="et"> 
    <source src="https://devraj.vip/assets/muzik/d3vr4j.mp3" type="audio/mpeg"></source> 
   </audio> 
